# demo-redis-subpub-rs

./: Cargo.toml  docker-compose.yml  test.sh
src/: consumer.rs  main.rs
