[package]
name = "demo-redis-subpub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.25", default-features = false, features = [
    "tokio-comp",
    "connection-manager",
    "json",
] }
tokio = { version = "1.37", features = ["full"] }
tokio-util = "0.7.4"
tokio-stream = "0.1.8"
futures-util = { version = "0.3.17", features = ["std", "sink"] }
log = "0.4.21"
anyhow = "1.0.82"
arc-swap = "1.7.1"
serde_json = "1.0.116"
